# quarticRootsFlocke

./: .gitignore  CMakeInstall.txt  CMakeLists-cflags.txt  CMakeLists.txt  Doxyfile  License.md  License.txt  Makefile  README.md  README.rst  Rakefile  Rakefile_common.rb  Rakefile_conf.rb
PolynomialRoots.xcodeproj/: project.pbxproj
PolynomialRoots.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cmake/: CMakeLists-common.txt  CMakeLists-utilities.txt  ResolveBoostMultiprecision.cmake
doc_generate/: Makefile  conf.py  index.md  index_CPP.md
docs/: .buildinfo  LICENSE.html  annotated.html  annotated_dup.js  author.html  classes.html  cubic.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  genindex.html  globals.html  globals_defs.html  graph_legend.html  graph_legend.md5  index.html  index_CPP.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  objects.inv  quadratic.html  quartic.html  readme.html  roleindex.json  search.html  searchindex.js
docs/_sources/: cubic.md.txt  quadratic.md.txt  quartic.md.txt
docs/_static/: cloud_sidebar.css
docs/api/: class_generic_container_namespace_1_1_generic_container.html  class_generic_container_namespace_1_1_generic_container_explorer.html  class_generic_container_namespace_1_1_generic_container_json_handler.html  class_generic_container_namespace_1_1_lua_interpreter.html  class_generic_container_namespace_1_1mat__type.html  class_polynomial_roots_1_1_cubic.html  class_polynomial_roots_1_1_quadratic.html  class_polynomial_roots_1_1_quartic.html  class_view_hierarchy.html  (+453 more)
docs/api-cpp/: class_a00027.html  class_a00031.html  class_a00035.html  class_polynomial_roots_1_1_cubic.html  class_polynomial_roots_1_1_quadratic.html  class_polynomial_roots_1_1_quartic.html  class_view_hierarchy.html  define_a00005_1ac870907a5180fe2ac17cb719f65585e9.html  define_a00008_1ac870907a5180fe2ac17cb719f65585e9.html  dir__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_Splines_submodules_quarticRootsFlocke_src.html  dir__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_quarticRootsFlocke_src.html  file_PolynomialRoots-1-Quadratic.cc.html  file_PolynomialRoots-2-Cubic.cc.html  file_PolynomialRoots-3-Quartic.cc.html  file_PolynomialRoots-Jenkins-Traub.cc.html  file_PolynomialRoots-Utils.cc.html  file_PolynomialRoots-Utils.hh.html  file_PolynomialRoots.hh.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_Splines_submodules_quarticRootsFlocke_src_PolynomialRoots-1-Quadratic.cc.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_Splines_submodules_quarticRootsFlocke_src_PolynomialRoots-2-Cubic.cc.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_Splines_submodules_quarticRootsFlocke_src_PolynomialRoots-3-Quartic.cc.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_Splines_submodules_quarticRootsFlocke_src_PolynomialRoots-Jenkins-Traub.cc.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_Splines_submodules_quarticRootsFlocke_src_PolynomialRoots-Utils.cc.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_Splines_submodules_quarticRootsFlocke_src_PolynomialRoots-Utils.hh.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_Splines_submodules_quarticRootsFlocke_src_PolynomialRoots.hh.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_quarticRootsFlocke_src_PolynomialRoots-1-Quadratic.cc.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_quarticRootsFlocke_src_PolynomialRoots-2-Cubic.cc.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_quarticRootsFlocke_src_PolynomialRoots-3-Quartic.cc.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_quarticRootsFlocke_src_PolynomialRoots-Jenkins-Traub.cc.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_quarticRootsFlocke_src_PolynomialRoots-Utils.cc.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_quarticRootsFlocke_src_PolynomialRoots-Utils.hh.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_quarticRootsFlocke_src_PolynomialRoots.hh.html  file_view_hierarchy.html  function_a00023_1ac18c1444f6f1642ac85d6021bf837952.html  function_namespace_polynomial_roots_1ac18c1444f6f1642ac85d6021bf837952.html  library_root.html  namespace_PolynomialRoots.html  program_listing_file_PolynomialRoots-1-Quadratic.cc.html  program_listing_file_PolynomialRoots-2-Cubic.cc.html  program_listing_file_PolynomialRoots-3-Quartic.cc.html  (+27 more)
docs_build/: Makefile  logo.graffle  merge.xml  project_common.py
doxygen/: doxyfile_utils  logo-big.xcf  logo.xcf
src/: PolynomialRoots-1-Quadratic.cc  PolynomialRoots-2-Cubic.cc  PolynomialRoots-3-Quartic.cc  PolynomialRoots-Jenkins-Traub.cc  PolynomialRoots-Utils.cc  PolynomialRoots-Utils.hh  PolynomialRoots-complex.hxx  PolynomialRoots.hh  PolynomialRootsBase.hh
src_tests/: TestHelpers.hh  TestReporter.hh  check_1_quadratic.cc  check_2_cubic.cc  check_3_quartic.cc  check_4_classical_cases.cc  check_eval_derivative.cc  termcolor.hh
srcs/: PolynomialRoot-Jenkins-Traub.cc  PolynomialRoots-1-Quadratic.cc  PolynomialRoots-2-Cubic.cc  PolynomialRoots-3-Quartic.cc  PolynomialRoots-Flocke.cc  PolynomialRoots-Jenkins-Traub.cc  PolynomialRoots-Quadratic.cc  PolynomialRoots-Utils.cc  PolynomialRoots-Utils.hh  PolynomialRoots.cc  PolynomialRoots.hh  check.cc  rpoly.cc  rpoly.hh  test.cc
test/: check.cc  check_1_quadratic.cc  check_2_cubic.cc  check_3_quartic.cc  check_quadratic.cc  test.cc  test.cc_OLD  test4.cc
(+619 files in other folders)
